# linkedin-profile-builder

./: .gitignore  LICENSE  README.md  pyproject.toml
automation/: README.md  add_languages.sh  add_skills.sh  fill_about.sh  fill_experience.sh  fill_intro.sh  inject_textarea.js  set_custom_url.sh
examples/: sample_output.json
src/linkedin_builder/: __init__.py  cli.py  generator.py  models.py  offline.py  output.py  parser.py
