[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "linkedin-profile-builder"
version = "0.1.0"
description = "AI-powered LinkedIn profile generator from PDF resumes"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "Yitebeier Aikebaier", email = "jsjjd3690@gmail.com"}]
keywords = ["linkedin", "resume", "ai", "profile", "career"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business",
]
dependencies = [
    "pdfplumber>=0.10.0",
    "anthropic>=0.40.0",
    "click>=8.0",
    "rich>=13.0",
    "jinja2>=3.0",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.scripts]
linkedin-builder = "linkedin_builder.cli:main"

[project.urls]
Homepage = "https://github.com/jdh847/linkedin-profile-builder"
Issues = "https://github.com/jdh847/linkedin-profile-builder/issues"

[tool.setuptools.packages.find]
where = ["src"]
